fixup! Implement gRPC per-call deadline support (fixes #11698)
Use virtual threads instead of platform threads for deadlines, and improve test comment clarity